<?xml version="1.0" encoding="utf-8"?>
<!-- Layout handled by ReminderViewHolder.java in ReminderAdapter.java -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:id="@+id/btDeleteReminderItemReminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/red"
                app:layout_constraintTop_toTopOf="@+id/tvReminderNameItemReminder"
                app:layout_constraintBottom_toBottomOf="@+id/tvReminderNameItemReminder"
                app:layout_constraintEnd_toEndOf="parent">

            <TextView
                    android:text="@string/delete_past_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDeleteReminderItemReminder"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp" />
        </androidx.cardview.widget.CardView>

        <ImageView
                android:src="@drawable/watch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivTimeFormReminderItemReminder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
                android:id="@+id/tvReminderDateItemReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/date_zeros"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivTimeFormReminderItemReminder"
                android:layout_marginStart="10dp" />

        <TextView
                android:id="@+id/tvReminderTimeItemReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/time_zeros"
                android:layout_marginEnd="20dp" />

        <TextView
                android:id="@+id/tvReminderNameItemReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tvReminderDateItemReminder"
                app:layout_constraintStart_toStartOf="@+id/tvReminderDateItemReminder"
                android:layout_marginTop="10dp" />

        <TextView
                android:id="@+id/tvReminderDescriptionItemReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="@+id/tvReminderNameItemReminder"
                app:layout_constraintTop_toBottomOf="@+id/tvReminderNameItemReminder"
                android:layout_marginTop="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/viewSeparationReminderItemItemReminder"
            android:background="@color/dark_blue"
            android:layout_marginTop="5dp"/>


</LinearLayout>