<?xml version="1.0" encoding="utf-8"?>
<!-- Layout handled by FormReminderActivity.java -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.FormReminderActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTitleFormReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/ultra_light_blue">

        <TextView
                android:text="@string/new_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleFormReminder"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNameFormReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTitleFormReminder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cardViewTitleFormReminder"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/text_input_color_selector"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/dark_blue">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColorHint="@color/dark_blue"
                android:textColor="@color/dark_blue"
                android:textAllCaps="false"
                android:id="@+id/textInReminderNameFormReminder" />

</com.google.android.material.textfield.TextInputLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNameFormReminder"
            android:layout_marginTop="15dp"
            android:id="@+id/viewLine1" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescriptionFormReminder"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:hint="@string/description"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cardViewTitleFormReminder"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/text_input_color_selector"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/dark_blue"
            app:layout_constraintTop_toBottomOf="@+id/viewLine1"
            android:layout_marginTop="10dp"
            app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColorHint="@color/dark_blue"
                android:textColor="@color/dark_blue"
                android:textAllCaps="false"
                android:id="@+id/textInReminderDescriptionFormReminder"
                app:layout_constraintTop_toBottomOf="@+id/viewLine1" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/viewLine2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescriptionFormReminder"
            android:layout_marginTop="15dp" />

    <ImageView
            android:src="@drawable/calendar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ivCalendarFormReminder"
            app:layout_constraintTop_toBottomOf="@+id/viewLine2"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/cardViewTitleFormReminder" />

    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDateFormReminder"
            app:layout_constraintStart_toEndOf="@+id/ivCalendarFormReminder"
            app:layout_constraintTop_toTopOf="@+id/ivCalendarFormReminder"
            app:layout_constraintBottom_toBottomOf="@+id/ivCalendarFormReminder"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />

    <Button
            android:id="@+id/btSelectDateFormReminder"
            android:background="@drawable/rounded_button"
            android:text="@string/today"
            android:layout_width="120dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="@+id/ivCalendarFormReminder"
            app:layout_constraintBottom_toBottomOf="@+id/ivCalendarFormReminder"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/light_blue" />

    <ImageView
            android:src="@drawable/watch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ivTimeFormReminder"
            app:layout_constraintTop_toBottomOf="@+id/ivCalendarFormReminder"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/cardViewTitleFormReminder" />

    <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTimeFormReminder"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivTimeFormReminder"
            app:layout_constraintBottom_toBottomOf="@+id/ivTimeFormReminder"
            app:layout_constraintTop_toTopOf="@+id/ivTimeFormReminder"
            android:layout_marginStart="10dp" />

    <Button
            android:id="@+id/btSelectTimeFormReminder"
            android:text="@string/select"
            android:background="@drawable/rounded_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="@+id/ivTimeFormReminder"
            app:layout_constraintBottom_toBottomOf="@+id/ivTimeFormReminder"
            app:layout_constraintEnd_toEndOf="@+id/btSelectDateFormReminder"
            android:textSize="16sp"
            android:textColor="@color/light_blue" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toTopOf="@+id/bottomBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/btnCancelFormReminder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:textSize="20sp" />

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark" />

        <TextView
                android:id="@+id/btnAcceptFormReminder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/accept"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/dark_blue" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>