<?xml version="1.0" encoding="utf-8"?>
<!-- Layout handled by PreferenceActivity.java -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.PreferenceActivity">

    <ImageView
            android:layout_width="58dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/arrow"
            android:id="@+id/ivBackPreference"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />

    <TextView
            android:text="@string/preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitlePreference"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackPreference"
            app:layout_constraintTop_toTopOf="@+id/ivBackPreference"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:text="@string/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleGeneralPreference"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/ivBackPreference"
            android:textColor="#7A7777"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftGuidePreference" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.03"
            android:id="@+id/guidelineLeftGuidePreference" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftGuidePreference"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleGeneralPreference"
            android:id="@+id/constLayLanguagePreference"
            android:layout_marginTop="10dp">

        <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/keyboard"
                android:id="@+id/ivKeyboardPreference"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:text="@string/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLanguagePreference"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivKeyboardPreference"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="@+id/ivKeyboardPreference"
                app:layout_constraintStart_toEndOf="@+id/ivKeyboardPreference"
                android:layout_marginStart="10dp" />

        <Spinner
                android:id="@+id/spinnerLanguagePreference"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/language_options"
                app:layout_constraintStart_toEndOf="@+id/tvLanguagePreference"
                app:layout_constraintTop_toTopOf="@+id/tvLanguagePreference"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLanguagePreference" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftGuidePreference"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constLayPermissionPreference"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/constLayLanguagePreference"
            android:layout_marginTop="10dp">

        <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/permissions"
                android:id="@+id/ivPermissionPreference"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
                android:text="@string/permissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPermissionPreference"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivPermissionPreference"
                app:layout_constraintTop_toTopOf="@+id/ivPermissionPreference"
                app:layout_constraintStart_toEndOf="@+id/ivPermissionPreference"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftGuidePreference"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/constLayPermissionPreference"
            android:layout_marginTop="10dp"
            android:id="@+id/constLayAboutAppPreference">

        <ImageView
                android:layout_width="55dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/info"
                android:id="@+id/ivInfoPreference"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:text="@string/about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAboutAppPreference"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivInfoPreference"
                app:layout_constraintTop_toTopOf="@+id/ivInfoPreference"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/ivInfoPreference"
                android:layout_marginStart="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>